--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -1,7 +1,7 @@
 .CanvasContainer {
   text-align: center;
 }
-#go {
+#newArray {
   background-color: green;
   border-radius: 0.25rem;
   padding: 5px 45px;
