--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -12,6 +12,12 @@
   color: white;
   padding: 10px 10px;
 }
+.test {
+  background-color: red;
+  border-radius: 0.5rem;
+  color: white;
+  padding: 10px 10px;
+}
 canvas {
   background-color: #333333;
   border: 2px solid white;
